<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:background="#dccfb1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/flights" />

    <EditText
        android:id="@+id/user1"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/un"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:textColor="#063e2c"
        android:textColorHint="#80a19e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <EditText
        android:id="@+id/pass1c"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/cp"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="#063e2c"
        android:textColorHint="#80a19e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/register"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circularedges"
        android:fontFamily="@font/open_sans"
        android:text="@string/register"
        android:textColor="#dccfb1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1c"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@drawable/aeroplane" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:textColor="#063e2c"
        android:textColorHint="#80a19e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user1"
        app:layout_constraintVertical_bias="0.06"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass1"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:hint="@string/p"
            android:inputType="textPassword"
            android:textColor="#063e2c"
            android:textColorHint="#80a19e" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>